# akcp

./: .gitignore  CMakeLists.txt  TODO
samples/: CMakeLists.txt
samples/connection_riented/: CMakeLists.txt  connection_riented_client.cpp  connection_riented_server.cpp
samples/delay_test/: CMakeLists.txt  delay_test_client.cpp  delay_test_server.cpp
samples/file_trans/: CMakeLists.txt  file_trans_client.cpp  file_trans_server.cpp  msg_def.h
src/: CMakeLists.txt  client.cpp  client.h  concurrency_components.h  kcp.cpp  kcp.h  server.cpp  server.h  session.cpp  session.h  typedef.h
src/tests/: CMakeLists.txt  all_unittest.cpp  concurrency_components_unittest.cpp  kcp_session_unittest.cpp
